Travel::Status::DE::IRIS 1.36 - Fri Nov 22 2019

    * Update stations list, prune duplicates and outdated entries
      (251 additions, 155 deletions). Incorporates patches by Moritz Schlarb
      and https://github.com/Knuspel -- Thanks!
    * Update documentation to reflect that EVA IDs used by DB IRIS are not
      the same as UIC station IDs (they just happen to be identical in 99% of
      cases)
    * Stations are now stored in share/stations.json. See README.md for
      station management hints.

Travel::Status::DE::IRIS 1.35 - Sun Nov 17 2019

    * Add additional dutch and austrian stations
      (thanks to https://github.com/Knuspel)
    * Add geocoordinates for several of those
      (thanks to https://github.com/Knuspel)

Travel::Status::DE::IRIS 1.34 - Sat Oct 19 2019

    * Improve request speed when using with_related by ignoring
      subway stations which do not have results anyways (e.g. in Hannover Hbf)
    * Do not forward unexpected IRIS message codes (ID ≥ 100) to the user
    * IRIS: Add ->related_stations accessor

Travel::Status::DE::IRIS 1.33 - Sat Oct 05 2019

    * Fix $result->route_pre / route_post accessors providing bogus data
      when all previous/following stops are cancelled. They used to return
      sched_route_pre / sched_route_post instead of an empty list in this case.

Travel::Status::DE::IRIS 1.32 - Thu Aug 22 2019

    * Travel::Status::DE::IRIS::Stations: Add geocoordinates fo some swiss
      and austrian stations

Travel::Status::DE::IRIS 1.31 - Thu Aug 08 2019

    * Travel::Status::DE::IRIS::Stations: Add EVA/UIC station numbers and use
      full names for non-german stations.

Travel::Status::DE::IRIS 1.30 - Wed Jul 17 2019

    * Result: Add ->station and ->station_uic accessors. These are useful to
      determine which station an individual train belongs to when requesting
      departures of multiple stations at once using the "with_related" option.

Travel::Status::DE::IRIS 1.29 - Tue Jul 09 2019
