@@ -1,3 +1,8 @@
+Travel::Status::DE::IRIS 1.37 - Sat Dec 07 2019
+
+    * Add geocoordinates for french stations served by Thalys/TGV
+      (patch by Florian Wurzel)
+
 Travel::Status::DE::IRIS 1.36 - Fri Nov 22 2019
 
     * Update stations list, prune duplicates and outdated entries
